--- a/src/nginx.tmpl
+++ b/src/nginx.tmpl
@@ -428,7 +428,7 @@ server {
 </html>';
     }
 
-{{- if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
+{{- if (and (exists "/etc/nginx/certs/shared.crt") (exists "/etc/nginx/certs/shared.key")) }}
     listen {{ $globals.external_https_port }} ssl http2;
     {{- if $globals.enable_ipv6 }}
     listen [::]:{{ $globals.external_https_port }} ssl http2;
@@ -436,8 +436,8 @@ server {
 
     ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
-    ssl_certificate /etc/nginx/certs/default.crt;
-    ssl_certificate_key /etc/nginx/certs/default.key;
+    ssl_certificate /etc/nginx/certs/shared.crt;
+    ssl_certificate_key /etc/nginx/certs/shared.key;
 
     # For HTTPS default server, we also serve the index page.
     # Nginx does not allow 'return' inside 'if', so we repeat the location block
